# xray-log-agent

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/models/: log_entry.py
app/services/: log_reader.py  publisher.py  xray_parser.py
